--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
     html,body { height:100%; }
+
     .container {
       position: relative;
       width: 50%;
     }
+
 
     #bookclass {
       height: 250px;
@@ -41,3 +43,14 @@
       background-repeat: no-repeat;
       background-size: 100%;
     }
+
+     /* nav bar and search button styling*/
+    nav {background-color: #e699ff; padding: 15px 0px;}
+    nav a {color: #000; font-size: 19px; text-decoration: none;}
+    nav ul {list-style-type:none;}
+    nav ul li {display: inline-block; padding: 10px 25px 10px 25px; line-height: 2; font-family: 'Flamenco'; font-size: 14pt;}
+    .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
+  #center-menu{
+    text-align: center; 
+    vertical-align: center;
+  }
