--- a/Menu-style.css
+++ b/Menu-style.css
@@ -48,7 +48,7 @@ p {
   margin-right: 100px;
   padding-left: 20px;
   padding-right: 20px;
-  font-family: 'Asap', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   color: #fff;
   text-align: center;
@@ -61,10 +61,10 @@ img {
 }
 
 hr {
-  width: 800px;
-  height: 3px;
+  width: 60%;
+  height: 2px;
   border: none;
-  background-color: #F7B733;
+  background-color: #fff;
 }
 
 textarea {
@@ -98,7 +98,7 @@ textarea {
 }
 
 .row {
-  margin: auto;
+  width: 100%;
   content: "";
   display: table;
   clear: both;
