--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-    html,body { height:100%; }
+    html,body { 
+      height:100%; 
+      margin: 0;
+      padding: 0;
+      border: 0;
+    }
 
     .container {
       position: relative;
@@ -45,8 +50,8 @@
     }
 
      /* nav bar and search button styling*/
-    nav {background-color: #e699ff; padding: 15px 0px;}
-    nav a {color: #000; font-size: 19px; text-decoration: none;}
+    nav {background-color: #5da2d5; padding: 15px 0px;}
+    nav a {color: #fff; font-size: 19px; text-decoration: none;}
     nav ul {list-style-type:none;}
     nav ul li {display: inline-block; padding: 10px 25px 10px 25px; line-height: 2; font-family: 'Flamenco'; font-size: 14pt;}
     .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
