--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@
       padding: 0;
       border: 0;
     }
-
+    body {
+      background-color: #FFC2C8;
+    }
     .container {
       position: relative;
       width: 50%;
     }
-
 
     #bookclass {
       height: 250px;
@@ -42,7 +43,6 @@
     }
     .parallax { 
       height: 100%;
-
       background-attachment: fixed;
       background-position: center;
       background-repeat: no-repeat;
