--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
       padding: 0;
       border: 0;
     }
+
+    h2{
+      color:#ECECEC;
+    }
+    
     body {
       background-color: #FFC2C8;
     }
@@ -50,8 +55,8 @@
     }
 
      /* nav bar styling*/
-    nav {background-color: #5da2d5; padding: 15px 0px;}
-    nav a {color: #fff; font-size: 19px; text-decoration: none;}
+    nav {background-color: #ECECEC; padding: 15px 0px;}
+    nav a {color: #000; font-size: 19px; text-decoration: none;}
     nav ul {list-style-type:none;}
     nav ul li {display: inline-block; padding: 10px 25px 10px 25px; line-height: 1.5; font-family: 'Flamenco'; font-size: 14pt;}
     .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
@@ -61,8 +66,8 @@
   }
 
    /* footer styling */
-    footer {background-color: #5da2d5;}
-    footer a {color: #fff; font-size: 14px; text-decoration: none;}
+    footer {background-color: #ECECEC;}
+    footer a {color: #000; font-size: 14px; text-decoration: none;}
     footer ul {list-style-type:none;}
     footer ul li {display: inline-block; padding: 10px 25px 10px 25px; line-height: 0.2; font-family: 'Flamenco'; font-size: 14pt;}
 
