--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@
       font-size: 32pt;
       text-shadow: 4px 4px #FFC2C8;
       line-height: 0.5;
+      padding: 0px 0px 0px 0px;
+      float: left;
     }
 
     h2{
@@ -67,7 +69,7 @@
     nav {background-color: #ECECEC; padding: 15px 0px; }
     nav a {color: #000; font-size: 19px; text-decoration: none;}
     nav ul {list-style-type:none;}
-    nav ul li {display: inline-block; padding: 5px 25px 5px 5px; line-height: 0.5; font-family: 'Flamenco'; font-size: 14pt;}
+    nav ul li {display: inline-block; padding: 5px 25px 5px 5px; font-family: 'Flamenco'; font-size: 14pt;}
     .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
   
     #center-menu{
