--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
     h2{
       color:#ECECEC;
-
+      font-size: 48pt;
     }
     
     body {
@@ -104,7 +104,7 @@
   nav {background-color: #ECECEC; padding: 15px 0px; }
   nav a {color: #000; font-size: 19px; text-decoration: none;}
   nav ul {list-style-type:none;}
-  nav ul li {display: inline-block; padding: 10px 25px 5px 25px; font-family: 'Flamenco'; font-size: 14pt;}
+  nav ul li {display: inline-block; padding: 10px 25px 0px 25px; font-family: 'Flamenco'; font-size: 14pt;}
   .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
 
   #center-menu{
@@ -116,7 +116,7 @@
   footer {background-color: #ECECEC;}
   footer a {color: #000; font-size: 14px; text-decoration: none;}
   footer ul {list-style-type:none;}
-  footer ul li {display: inline-block; padding: 10px 25px 10px 25px; line-height: 0.2; font-family: 'Flamenco'; font-size: 14pt;}
+  footer ul li {display: inline-block; padding: 10px 25px 0px 25px; line-height: 0.2; font-family: 'Flamenco'; font-size: 14pt;}
 
   footer{
     text-align: center;
