--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
   nav {background-color: #ECECEC; padding: 15px 0px; }
   nav a {color: #000; font-size: 19px; text-decoration: none;}
   nav ul {list-style-type:none;}
-  nav ul li {display: inline-block; padding: 10px 25px 0px 25px; font-family: 'Flamenco'; font-size: 14pt;}
+  nav ul li {display: inline-block; padding: 10px 25px 0px 25px; font-family: 'Flamenco'; font-size: 14pt; line-height: 1.3;}
   .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
 
   #center-menu{
