--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
       font-family: Flamenco;
       text-decoration: bold;
       font-size: 24pt;
+      font-size: 3vw;
       text-shadow: 4px 4px #FFC2C8;
       line-height: 0.1;
       padding: 0px 0px 0px 0px;
@@ -103,9 +104,9 @@
 
    /* nav bar styling*/
   nav {background-color: #ECECEC; padding: 2px 0px; }
-  nav a {color: #000; font-size: 16px; text-decoration: none;}
+  nav a {color: #000; font-size: 16px; font-size: 1.6vw;text-decoration: none;}
   nav ul {list-style-type:none;}
-  nav ul li {display: inline-block; padding: 10px 25px 0px 25px; font-family: 'Flamenco'; font-size: 12pt; line-height: 1.3;}
+  nav ul li {display: inline-block; padding: 10px 25px 0px 25px; padding: 1% 2% 0px 2%; font-family: 'Flamenco'; font-size: 12pt; line-height: 1.3;}
   .button {background-color: #000; color: #fff; display: inline-block; padding: 4px 15px; border: none;}
 
   #center-menu{
@@ -117,7 +118,7 @@
   footer {background-color: #ECECEC;}
   footer a {color: #000; font-size: 12px; text-decoration: none;}
   footer ul {list-style-type:none;}
-  footer ul li {display: inline-block; padding: 10px 25px 0px 25px; line-height: 0.1; font-family: 'Flamenco'; font-size: 14pt;}
+  footer ul li {display: inline-block; padding: 10px 25px 0px 25px; padding: 1% 2% 0px 2%; line-height: 0.1; font-family: 'Flamenco'; font-size: 14pt;}
 
   footer{
     text-align: center;
